# billiam-database-dbt

./: .gitignore  .pre-commit-config.yaml  README.md  catalog.json  dbt-commands.sh  graph.gpickle  graph_summary.json  manifest.json  partial_parse.msgpack  pyproject.toml  run_results.json
.github/workflows/: deploy-dbt.yaml  tests.yaml
billiam_database/: packages.yml
billiam_database/models/: _docs.md  groups.yml
billiam_database/models/presentation/: _docs.md
billiam_database/models/staging/: _docs.md  _schema.yml
profiler/: profiler.py
