[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "billiam-database"
version = "0.0.0"
description = "OLAP database project for life admin (feat. dbt)."
authors = [{name = "billwallis"}]
readme = "README.md"
keywords = ["sql", "dbt", "duckdb"]
requires-python = ">=3.11"
dependencies = [
    "dbt-core>=1.8,<1.9",
    "dbt-duckdb>=1.8,<1.9",
    "duckdb>=1.0.0",
    "python-dotenv[cli]>=1.1.0",
]

[dependency-groups]
dev = [
    "coverage-badge>=1.1.0",
    "db-query-profiler>=0.0.8",
    "pre-commit>=4.1.0",
]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]


[tool.setuptools]
packages = []


[tool.uv]
required-version = ">=0.7.0,<1.0.0"


# https://docs.sqlfluff.com/en/stable/configuration.html#default-configuration
[tool.sqlfluff.core]
dialect = "duckdb"
templater = "dbt"
max_line_length = 120  # ...but try to stay under 80
exclude_rules = [
    "LT08",  # Blank line expected but not found after CTE closing bracket
    "ST06",  # Select wildcards then simple targets before calculations and aggregates
    "ST07",  # Prefer specifying join keys instead of using USING
    "CV03",  # Trailing comma in select statement forbidden  (this is okay in DuckDB)
]

[tool.sqlfluff.templater.dbt]
project_dir = "billiam_database/"
profiles_dir = "billiam_database/"
target = "sqlfluff"

[tool.sqlfluff.indentation]
indented_joins = true
indented_using_on = true
indented_on_contents = true
template_blocks_indent = false

###
# Capitalisation bundle
# https://docs.sqlfluff.com/en/stable/rules.html#capitalisation-bundle
###

# https://docs.sqlfluff.com/en/stable/rules.html#rule-capitalisation.keywords
[tool.sqlfluff.rules.capitalisation.keywords]  # CP01
capitalisation_policy = "lower"

# https://docs.sqlfluff.com/en/stable/rules.html#rule-capitalisation.identifiers
[tool.sqlfluff.rules.capitalisation.identifiers]  # CP02
extended_capitalisation_policy = "lower"

###
# Layout bundle
# https://docs.sqlfluff.com/en/stable/rules.html#layout-bundle
###

# https://docs.sqlfluff.com/en/stable/rules.html#rule-layout.indent
[tool.sqlfluff.layout.type.indent]  # LT02
line_position = "trailing"

# https://docs.sqlfluff.com/en/stable/rules.html#rule-layout.commas
[tool.sqlfluff.layout.type.comma]  # LT04
line_position = "trailing"

###
# References bundle
# https://docs.sqlfluff.com/en/stable/rules.html#references-bundle
###

# https://docs.sqlfluff.com/en/stable/rules.html#rule-references.quoting
[tool.sqlfluff.rules.references.quoting]  # RF06
prefer_quoted_identifiers = false
prefer_quoted_keywords = true
ignore_words = ["transaction", "date"]
